--- a/.env
+++ b/.env
@@ -3,4 +3,9 @@
 #pour le register 
 VITE_API_URL_MEMBRE =http://localhost:4000/membre
 
+
+# pour la formation 
+VITE_API_URL_FORMATION =http://localhost:4000/formation
+
+
 # <p>API URL : {import.meta.env.VITE_API_URL_REGISTER}</p> APPEL 
