--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 
 
 #pour le register 
-VITE_API_URL_MEMBRE =http://localhost:4000/membre
+VITE_API_URL_MEMBRE =http://localhost:5000/api/membre
 
 
 # pour la formation 
-VITE_API_URL_FORMATION =http://localhost:4000/formation
+VITE_API_URL_FORMATION =http://localhost:5000/api/formation
 
 
 # <p>API URL : {import.meta.env.VITE_API_URL_REGISTER}</p> APPEL 
