--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-devtools": "^5.62.2",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "keycloak-js": "^25.0.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
