mise en place de keycloak dans un context, et protection de l'admin , il nous reste juste le membre et le role

--- a/.env
+++ b/.env
@@ -9,3 +9,16 @@ VITE_API_URL_FORMATION =http://localhost:5000/api/formation
 
 
 # <p>API URL : {import.meta.env.VITE_API_URL_REGISTER}</p> APPEL 
+
+
+
+
+# **************************************KEYCLOAK ********************************
+
+VITE_API_KC_URL=http://localhost:8080
+
+VITE_API_KC_REALM=talentup
+
+VITE_API_KC_CLIENT_ID=talentup_front
+
+
