--- a/.env
+++ b/.env
@@ -21,4 +21,10 @@ VITE_API_KC_REALM=talentup
 
 VITE_API_KC_CLIENT_ID=talentup_front
 
+VITE_API_KC_LOGOUT=http://localhost:5173
+
+VITE_API_KC_WEB_ORIGIN=http://localhost:5173/protected 
+
+
+
 
