--- a/.env
+++ b/.env
@@ -1,14 +1,13 @@
 
+# ************************************NODE JS ${import.meta.env.VITE_API_URL_FORMATION}
 
-#pour le register 
-VITE_API_URL_MEMBRE =http://localhost:5000/api/membre
-
-
-# pour la formation 
-VITE_API_URL_FORMATION =http://localhost:5000/api/formation
+# ********************************************CATEGORIE 
+VITE_API_BK_CATEGORIE= http://localhost:5001/api/categories
 
 
-# <p>API URL : {import.meta.env.VITE_API_URL_REGISTER}</p> APPEL 
+VITE_API_BK_FORMATION= http://localhost:5001/api/formations
+
+
 
 
 
