gestion formation et categorie

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 VITE_API_BK_CATEGORIE= http://localhost:5001/api/categories
 
 
+# *******************************************FORMATION 
 VITE_API_BK_FORMATION= http://localhost:5001/api/formations
-
 
 
 
