ajout des users dans le bdd

--- a/.env
+++ b/.env
@@ -10,6 +10,10 @@ VITE_API_BK_FORMATION= http://localhost:5001/api/formations
 
 
 
+# ******************************************* users 
+VITE_API_BK_USERS= http://localhost:5001/api/users
+
+
 
 
 # **************************************KEYCLOAK ********************************
